# workspace

./: .gitignore
.metadata/: version.ini
MagicStocks/: MagicStocks.pro  customplotdialog.cpp  customplotdialog.h  customplotdialog.ui  main.cpp  mainwindow.cpp  (+2 more)
superspacerace/: .cproject  .project  CMakeLists.txt  Resources.cfg  ogre.cfg  plugins.cfg
superspacerace/resources/models/: Cube.mesh  Cube.mesh.xml  Torus.006.mesh  Torus.006.mesh.xml  Torus.4.mesh  Torus.4.mesh.xml  Torus.mesh  Torus.mesh.xml  _missing_material.material  fighter.mesh  ship_fighter1.mesh  torus.scene
superspacerace/resources/textures/: Material.001.material  Material.002.material  Material.003.material  Material.004.material  _missing_material.material  flare.material  plasma.material  plasmagun.particle  player.material  shipengine.particle  skybox.material  skybox2.material
superspacerace/src/: DynamicGameObject.cpp  DynamicGameObject.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  GamePhysics.cpp  GamePhysics.h  GameWorld.cpp  GameWorld.h  GraphicsManager.cpp  GraphicsManager.h  InputManager.cpp  InputManager.h  JoystickHandler.cpp  JoystickHandler.h  ObjectCameraFollower.cpp  ObjectCameraFollower.h  PhysicsObject.cpp  PhysicsObject.h  PickSystem.cpp  PickSystem.h  RaceTarget.cpp  RaceTarget.h  ResourceManager.cpp  ResourceManager.h  SceneNodeToObjectMapper.cpp  SceneNodeToObjectMapper.h  ShipJoystickController.cpp  ShipJoystickController.h  SpaceShip.cpp  SpaceShip.h  StaticGameObject.cpp  StaticGameObject.h  UpdateFrameListener.cpp  UpdateFrameListener.h  main.cpp
(+91 files in other folders)
